fixing side scroling on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,7 +8,7 @@ canvas {max-width: 100%; }
 
 @media(max-width: $screen-sm) {
   .game-window-container {
-    margin: 0 -15px;
+    padding: 0;
   }
 }
 
